--- a/index.html
+++ b/index.html
@@ -1,12 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="./src/css/styles.css">
     <title>Rolling Clinic - Policonsultorios</title>
 </head>
+
 <body>
-    <h1>Rolling Clinic - Policonsultorios</h1>
-    <!-- rama dev -->
+    <div class="container text-center">
+        <div class="row">
+            <div class="col">
+                <h4>Datos</h4>
+                <form>
+                    <div class="row">
+                        <div class="col">
+                            <label>Fecha</label>
+                            <input type="date" id="fecha" required>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <label>Hora</label>
+                            <input type="time" id="hora" required>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <label>Médico</label>
+                            <input type="text" id="medico" required>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <label>Motivo</label>
+                            <input type="text" id="motivo" required>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col"><input type="submit" value="Solicitar turno" id="solicitarTurno" required></div>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-md-8 offset-md-2">
+                <h4>Mis turnos</h4>
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>Fecha</th>
+                            <th>Hora</th>
+                            <th>Médico</th>
+                            <th>Motivo de consulta</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+        <script src="./src/js/script.js" type="module"></script>
 </body>
+
 </html>
