--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col"><input type="submit" value="Solicitar turno" id="solicitarTurno" required></div>
+                        <div class="col"><input type="submit" value="Solicitar turno" id="solicitarTurno" required>
+                        </div>
                     </div>
                 </form>
             </div>
@@ -74,7 +75,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-        <script src="./src/js/script.js" type="module"></script>
+    <script src="./src/js/script.js" type="module"></script>
 </body>
 
 </html>
