--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="row">
             <div class="col">
                 <h4>Datos</h4>
-                <form>
+                <form id="formTurnos">
                     <div class="row">
                         <div class="col">
                             <label>Fecha</label>
@@ -48,7 +48,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-12 col-md-8 offset-md-2">
+            <div class="col-12 col-md-12">
                 <h4>Mis turnos</h4>
                 <table class="table table-striped">
                     <thead>
@@ -60,9 +60,7 @@
                             <th></th>
                         </tr>
                     </thead>
-                    <tbody>
-
-                    </tbody>
+                    <tbody id="cuerpoTurnos"></tbody>
                 </table>
             </div>
         </div>
@@ -76,6 +74,7 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
     <script src="./src/js/script.js" type="module"></script>
+    <script src="https://use.fontawesome.com/c2813ccf5b.js"></script>
 </body>
 
 </html>
