--- a/src/paginas/medicos.html
+++ b/src/paginas/medicos.html
@@ -118,7 +118,7 @@
         <table class="table table-hover" >
             <thead>
                 <tr>
-                  <th scope="col"><i class="fa-solid fa-user"></i></th>
+                  <th scope="col"><!-- <i class="fa-solid fa-user"></i> -->Turno ID</th>
                   <th scope="col">Paciente</th>
                   <th scope="col"><i class="fa-solid fa-calendar"></i></th>
                   <th scope="col"><i class="fa-solid fa-clock"></i></th>
