--- a/index.html
+++ b/index.html
@@ -4,9 +4,67 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rolling Clinic - Policonsultorios</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
     <h1>Rolling Clinic - Policonsultorios</h1>
     <!-- rama dev -->
+
+    <div class="container justify-content-center">
+        <div class="dr">
+            <h3 id="dr">Dr.</h3>
+        </div>
+        <div class="dr">
+            <h5 id="epecialidad">Especialidad</h5>
+        </div>
+        <hr>
+        <form>
+            <div class="row mb-3">
+              <label for="nombre" class="col-sm-2 col-form-label">Nombre</label>
+              <div class="col-sm-5">
+                <input type="text" class="form-control" id="nombre">
+              </div>
+            </div>
+            <div class="row mb-3">
+              <label for="apellido" class="col-sm-2 col-form-label">Apellido</label>
+              <div class="col-sm-5">
+                <input type="text" class="form-control" id="apellido">
+              </div>
+            </div>
+            <div class="row mb-3">
+                <label for="dni" class="col-sm-2 col-form-label">DNI</label>
+                <div class="col-sm-5">
+                  <input type="number" class="form-control" id="dni">
+                </div>
+              </div>
+              <div class="row mb-3">
+                <label for="telefono" class="col-sm-2 col-form-label">Telefono</label>
+                <div class="col-sm-5">
+                  <input type="tel" class="form-control" id="telefono">
+                </div>
+              </div>
+              <div class="row mb-3">
+                <label for="direccion" class="col-sm-2 col-form-label">Direccion</label>
+                <div class="col-sm-5">
+                  <input type="text" class="form-control" id="direccion">
+                </div>
+              </div>
+              <div class="row g-3" >
+                <div class="col-md-3">
+                    <label for="provincia" class="form-label">Provincia</label>
+                    <input type="text" class="form-control" id="provincia">
+                </div>
+                <div class="col-md-3">
+                    <label for="localidad" class="form-label">Localidad</label>
+                    <input type="text" class="form-control" id="localidad">
+                </div>
+              </div>
+            
+            <button type="submit" class="btn mt-3 btn-primary">Sign in</button>
+          </form>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    
 </body>
 </html>
