--- a/src/html/registro.html
+++ b/src/html/registro.html
@@ -24,24 +24,40 @@
         <div class="container">
             <h2 class="text-center">Regístrate</h2>
             <form id="registration-form">
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="userType" id="doctor" value="doctor">
+                <div class="form-check form-check-inline" id="userType">
+                    <input class="form-check-input" type="radio" name="userType" id="doctor" value="doctor" required>
                     <label class="form-check-label" for="doctor">Soy médico</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="userType" id="patient" value="patient">
+                
+                    <input class="form-check-input" type="radio" name="userType" id="patient" value="patient" required>
                     <label class="form-check-label" for="patient">Soy paciente</label>
                 </div>
                 <div class="form-group">
-                    <input type="text" class="form-control" id="name" placeholder="Nombre completo" required>
+                    <input type="text" class="form-control" id="full-name" placeholder="Nombre completo" required>
                 </div>
                 <div class="form-group">
                     <input type="email" class="form-control" id="email" placeholder="Correo electrónico" required>
                 </div>
                 <div class="form-group">
+                    <input type="text" class="form-control" id="dni" placeholder="DNI" required>
+                </div>
+                <div class="form-group">
                     <input type="password" class="form-control" id="password" placeholder="Contraseña" required>
                 </div>
+                <div class="form-group">
+                    <input type="password" class="form-control" id="confirm-password"
+                        placeholder="Re-ingreso de contraseña" required>
+                </div>
+                <div class="form-group">
+                    <input type="text" class="form-control" id="address" placeholder="Domicilio" required>
+                </div>
+                <div class="form-group">
+                    <input type="text" class="form-control" id="postal-code" placeholder="Código postal" required>
+                </div>
+                <div class="form-group">
+                    <input type="tel" class="form-control" id="phone" placeholder="Teléfono" required>
+                </div>
                 <button type="submit" class="btn btn-primary btn-block">Registrar</button>
+                <button type="reset" class="btn btn-secondary btn-block">Reset</button>
             </form>
         </div>
 
