--- a/src/pagina/tablaConsulta.html
+++ b/src/pagina/tablaConsulta.html
@@ -6,7 +6,7 @@
     <title>Rolling Clinic - Policonsultorios</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <link rel="stylesheet" href="./css/tabla.css">
+    <link rel="stylesheet" href="../css/tabla.css">
     <script src="https://kit.fontawesome.com/3a0c1a8233.js"crossorigin="anonymous"></script>
 </head>
 
@@ -17,7 +17,7 @@
             <div class="container-fluid d-flex justify-content-between">
                 <div class="navbar-logo col-md-4 d-flex justify-content-between col-12">
                     <a class="navbar-brand" href="#">
-                        <img src="./iconos/health-icon.svg" alt="Logo" width="50" height="40" class="d-inline-block align-text-center">
+                        <img src="../iconos/health-icon.svg" alt="Logo" width="50" height="40" class="d-inline-block align-text-center">
                     Rolling Clínica
                     </a>
                     <button class="navbar-toggler border border-2 border-light" data-bs-theme="dark" type="button" data-bs-target="#navbarNav" id="navbar-toggler" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" popovertarget="menu-nav">
@@ -89,7 +89,7 @@
     </header>
 
 
-    <img src="./img/Foto4.png" class="img-fluid w-100 " alt="...">
+    <img src="../img/Foto4.png" class="img-fluid w-100 " alt="...">
     <div class="text-center contacto-style">
         <div class="container-fluid">
             <div class="encabezado"><h5>Consultas ingresadas</h5></div>
@@ -115,7 +115,7 @@
                                       
                                     </tbody>
                                 </table>
-                                <a href="../index.html" class="btn btn-orange rounded-2 place-self-center mb-4">Volver a Página Principal</a>                                
+                                <a href="/index.html" class="btn btn-orange rounded-2 place-self-center mb-4">Volver a Página Principal</a>                                
                             </div>
                         </div>
                     </div>
@@ -127,7 +127,7 @@
                     <article class="row justify-content-center justify-content-md-around align-items-center w-100">
                         <div class="col-lg-4 col-6 d-flex justify-content-around align-items-center bordesFooter align-self-stretch">
                             <h3><i class="fa-solid fa-truck-medical fa-fade fa-2xl"></i></h3>
-                            <div class="m-3"><img src="./img/ministerioSalud.jpg" alt="" srcset=""></div>
+                            <div class="m-3"><img src="../img/ministerioSalud.jpg" alt="" srcset=""></div>
                         </div>
                         <div class="col-lg-4 col-6 align-items-center bordesFooter">
                             <ul class="d-flex justify-content-between flex-column align-items-start gap-3 p-3 pt-3 w-100">
@@ -152,8 +152,8 @@
     
 
     <!-- SCRIPTS -->
-    <script src="./js/tablaCons.js"></script>
-    <script src="./js/scriptLogin.js"></script>
+    <script src="../js/tablaCons.js"></script>
+    <script src="../js/scriptLogin.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 
