--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./src/css/global.css">
     <link rel="stylesheet" href="./src/css/carrousel.css">
+    <script
+      src="https://kit.fontawesome.com/3a0c1a8233.js"
+      crossorigin="anonymous"
+    ></script>
 </head>
 <body class="content">
     <header>
-        <!-- bg-body-tertiary -->
         <nav class="navbar navbar-expand-md ">
             <div class="container-fluid d-flex justify-content-between">
                 <div class="navbar-logo col-md-4 d-flex justify-content-between col-12">
