--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <nav class="navbar navbar-expand-md ">
             <div class="container-fluid d-flex justify-content-between">
                 <div class="navbar-logo col-md-4 d-flex justify-content-between col-12">
-                    <a class="navbar-brand text-light" href="#">
+                    <a class="navbar-brand" href="#">
                         <img src="./src/iconos/health-icon.svg" alt="Logo" width="50" height="40" class="d-inline-block align-text-center">
-                    Rolling Consultorios
+                    Rolling Clínica
                     </a>
                     <button class="navbar-toggler border border-2 border-light" data-bs-theme="dark" type="button" data-bs-target="#navbarNav" id="navbar-toggler" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" popovertarget="menu-nav">
                         <span class="navbar-toggler-icon"></span>
@@ -40,9 +40,9 @@
                             <a class="nav-link" href="#">Contacto</a>
                         </li>
                     </ul>
-                    <div class="btn-reg-log d-flex gap-2 align-items-center mt-3 mt-md-0 ms-5" id="btn-reg-log">
-                        <button class="btn btn-outline-info text-light">Registro</button>
-                        <button class="btn btn-primary" id="btn-login">Login</button>
+                    <div class="btn-reg-log d-flex gap-2 align-items-center mt-3 mt-md-0 ms-5">
+                        <button class="btn btn-secondary">Registro</button>
+                        <button class="btn btn-primary btn-login">Login</button>
                     </div>
                 </div>
                 <!-- MENU POPOVER MOBILE -->
@@ -61,9 +61,9 @@
                             <a class="nav-link" href="#">Contacto</a>
                         </li>
                     </ul>
-                    <div class="btn-reg-log d-flex gap-2 align-items-center mt-3 mt-md-0" id="btn-reg-log">
-                        <button class="btn btn-outline-info text-light">Registro</button>
-                        <button class="btn btn-primary" id="btn-login">Login</button>
+                    <div class="btn-reg-log d-flex gap-2 align-items-center mt-3 mt-md-0">
+                        <button class="btn btn-secondary">Registro</button>
+                        <button class="btn btn-primary btn-login">Login</button>
                     </div>
                 </div>
                 <!-- MODAL LOGIN -->
@@ -71,18 +71,18 @@
                     <form method="dialog" id="form-login">
                         <button type="button" class="btn-close m-1 border border-2 border-white p-1 bg-light" id="btn-close-login" aria-label="Close"></button>
                         <div class="input-group">
-                            <span for="usuario" class="input-group-text fw-bold text-light">Usuario</span>
+                            <span for="usuario" class="input-group-text">Usuario</span>
                             <input type="text" name="usuario" id="usuario" class="form-control" autofocus>
                         </div>
                         <div class="input-group">
-                            <span for="password" class="input-group-text fw-bold text-light">Password</span>
+                            <span for="password" class="input-group-text">Password</span>
                             <input type="password" name="password" id="password" class="form-control">
                         </div>
                         <div class="login-buttons">
                             <button class="btn btn-primary" id="btn-login-ingresar">Ingresar</button>
-                            <button class="btn btn-outline-light" id="btn-login-cancelar">Cancelar</button>
+                            <button class="btn btn-secondary" id="btn-login-cancelar">Cancelar</button>
                         </div>
-                        <p class="text-light">Aun no tenes cuenta? <a class="btn btn-outline-info" href="#">Registrarse</a></p>
+                        <p class="">Aun no tenes cuenta? <a class="btn btn-orange btn-sm" href="#">Registrarse</a></p>
                     </form>
                 </dialog>
             </div>
