--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
                         </li>
                     </ul>
                     <div class="btn-reg-log d-flex gap-2 align-items-center mt-3 mt-md-0 ms-5">
-                        <button class="btn btn-secondary">Registro</button>
-                        <button class="btn btn-primary btn-login">Login</button>
+                        <button class="btn-secundario rounded rounded-sm p-1">Registro</button>
+                        <button class="btn-primario btn-login rounded rounded-sm p-1">Login</button>
                     </div>
                 </div>
                 <!-- MENU POPOVER MOBILE -->
-                <div class="menu-nav text-light" id="menu-nav" popover role="menu">
+                <div class="menu-nav" id="menu-nav" popover role="menu">
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Inicio</a>
@@ -62,10 +62,11 @@
                         </li>
                     </ul>
                     <div class="btn-reg-log d-flex gap-2 align-items-center mt-3 mt-md-0">
-                        <button class="btn btn-secondary">Registro</button>
-                        <button class="btn btn-primary btn-login">Login</button>
+                        <button class="btn-secundario rounded rounded-sm p-1">Registro</button>
+                        <button class="btn-primario rounded rounded-sm p-1 btn-login">Login</button>
                     </div>
                 </div>
+                <!-- FIN MENU MOBILE -->
                 <!-- MODAL LOGIN -->
                 <dialog id="modal-login">
                     <form method="dialog" id="form-login">
@@ -79,42 +80,57 @@
                             <input type="password" name="password" id="password" class="form-control">
                         </div>
                         <div class="login-buttons">
-                            <button class="btn btn-primary" id="btn-login-ingresar">Ingresar</button>
-                            <button class="btn btn-secondary" id="btn-login-cancelar">Cancelar</button>
+                            <button class="btn-primario rounded rounded-sm p-1" id="btn-login-ingresar">Ingresar</button>
+                            <button class="btn-secundario rounded rounded-sm p-1" id="btn-login-cancelar">Cancelar</button>
                         </div>
-                        <p class="">Aun no tenes cuenta? <a class="btn btn-orange btn-sm" href="#">Registrarse</a></p>
+                        <p class="">Aun no tenes cuenta? <a class="btn-orange btn-sm rounded rounded-sm p-2" href="#">Registrarse</a></p>
                     </form>
                 </dialog>
+                <!-- FIN MODAL LOGIN -->
             </div>
         </nav>
     </header>
-    <!-- --INICIO DE CARROUSEL -->
-    <main>
-        <div id="carouselExample" class="carousel slide">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
+    <main class="container">
+        <!-- --INICIO DE CARROUSEL -->
+        <section id="carousel-rolling" class="carousel slide">
+          <article class="carousel-inner">
+            <figure class="carousel-item active">
               <img src="./src/img/carrusel1.png" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
+            </figure>
+            <figure class="carousel-item">
               <img src="./src/img/carrusel2.png" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
+            </figure>
+            <figure class="carousel-item">
               <img src="./src/img/carrusel3.png" class="d-block w-100" alt="...">
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+            </figure>
+          </article>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carousel-rolling" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
           </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+          <button class="carousel-control-next" type="button" data-bs-target="#carousel-rolling" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
           </button>
-        </div>
+        </section>
+        <!-- --FIN DE CARROUSEL -->
+        <section class="main-container">
+            <article class="seccion-servicios">
+                <h3>Nuestros Servicios</h3>
+            </article>
+            <article class="seccion-consulta">
+                <h3>Dejanos tu consulta</h3>
+            </article>
+            <article class="seccion-gestion">
+                <button>Gestiona tus Turnos</button>
+                <button>Mis Estudios</button>
+            </article>
+            <article class="seccion-profesionales">
+                <h3>Nuestros Profesionales</h3>
+            </article>
+        </section>
     </main>
 
-<!-- --FIN DE CARROUSEL -->
-    <h1>Rolling Clinic - Policonsultorios</h1>
     
     
     <!-- FOOTER -->
