--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rolling Clinic - Policonsultorios</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="./src/css/global.css">
     <link rel="stylesheet" href="./src/css/carrousel.css">
     <link rel="stylesheet" href="./src/css/styleSeccionProfesionales.css">
+    <link rel="stylesheet" href="./src/css/global.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <!-- Link Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +18,7 @@
       crossorigin="anonymous"
     ></script>
 </head>
-<body class="">
+<body class="container">
     <header>
         <nav class="navbar navbar-expand-md ">
             <div class="container-fluid d-flex justify-content-between">
@@ -27,7 +27,7 @@
                         <img src="./src/iconos/health-icon.svg" alt="Logo" width="50" height="40" class="d-inline-block align-text-center">
                     Rolling Clínica
                     </a>
-                    <button class="navbar-toggler border border-2 border-light" data-bs-theme="dark" type="button" data-bs-target="#navbarNav" id="navbar-toggler" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" popovertarget="menu-nav">
+                    <button class="navbar-toggler border border-2 border-light" data-bs-theme="light" type="button" data-bs-target="#navbarNav" id="navbar-toggler" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" popovertarget="menu-nav">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                 </div>
@@ -67,7 +67,7 @@
                             <a class="nav-link" href="#">Contacto</a>
                         </li>
                     </ul>
-                    <div class="btn-reg-log d-flex gap-2 align-items-center mt-3 mt-md-0">
+                    <div class="btn-reg-log d-flex gap-3 align-items-center mt-3 mt-md-0">
                         <button class="btn-secundario rounded rounded-sm p-1">Registro</button>
                         <button class="btn-primario rounded rounded-sm p-1 btn-login">Login</button>
                     </div>
@@ -130,26 +130,27 @@
             <article class="seccion-gestion d-flex flex-column text-center align-items-center justify-content-center">
                 <h3 class="">Auto Gestión</h3>
                 <section class="d-flex flex-column align-items-center justify-content-center gap-2 p-2 flex-sm-row">
-                    <button class="d-flex align-items-center justify-content-center btn-orange rounded rounded-sm p-5 col-12 col-sm-6 h-50">Gestiona tus Turnos</button>
-                    <button class="d-flex align-items-center justify-content-center btn-orange rounded rounded-sm p-5 col-12 col-sm-6 h-50">Mis Estudios</button>
+                    <button class="d-flex align-items-center justify-content-center btn-orange rounded rounded-sm p-5 col-12 col-sm-6 btn-gestion">Gestiona tus Turnos</button>
+                    <button class="d-flex align-items-center justify-content-center btn-orange rounded rounded-sm p-5 col-12 col-sm-6 btn-gestion">Mis Estudios</button>
                 </section>
             </article>
             <article class="seccion-profesionales">
-                <h3 class="titleSectionProfesionales">Nuestros Profesionales</h3>
+                <h3 class="text-center mb-4">Nuestros Profesionales</h3>
                 <div class="swiper">
                   <div class="swiper-wrapper" id="sliderProfesionales">
                   </div>
                   <div class="swiper-pagination"></div>
-                  <div class="swiper-button-prev"></div>
-                  <div class="swiper-button-next"></div>
+                  <div class="swiper-controls">
+                      <div class="swiper-button-prev"></div>
+                      <div class="swiper-button-next"></div>
+                  </div>
                 </div>
             </article>
         </section>
     </main>
     <!-- FOOTER -->
-    <!-- row d-flex justify-content-center justify-content-md-around align-items-center w-100 m-0 gap-1  -->
     <footer class="container">
-        <article class="d-flex flex-column-reverse align-items-center justify-content-center w-100 gap-2 flex-sm-row flex-wrap">
+        <article class="d-flex flex-column-reverse align-items-center justify-content-center w-100 gap-2 flex-sm-row flex-wrap justify-content-sm-between">
             <div class="col-lg-4 d-flex col-12 col-sm-3 justify-content-center align-items-center bordesFooter align-self-stretch" >
                 <h3><i class="fa-solid fa-truck-medical fa-fade fa-2xl"> </i>           </h3>    
                 <div class="m-3"><img src="./img/ministerioSalud.jpg" alt="" srcset=""> </div>
