--- a/index.html
+++ b/index.html
@@ -98,34 +98,31 @@
     </header>
     <main class="container">
         <!-- --INICIO DE CARROUSEL -->
-        <section id="carousel-rolling" class="carousel slide">
-          <article class="carousel-inner">
-            <figure class="carousel-item active">
-              <img src="./src/img/carrusel1.png" class="d-block w-100" alt="...">
-            </figure>
-            <figure class="carousel-item">
-              <img src="./src/img/carrusel2.png" class="d-block w-100" alt="...">
-            </figure>
-            <figure class="carousel-item">
-              <img src="./src/img/carrusel3.png" class="d-block w-100" alt="...">
-            </figure>
-          </article>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carousel-rolling" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carousel-rolling" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
+        <section id="carousel-rolling" class="carousel slide rounded rounded-md overflow-hidden mb-2">
+            <article class="carousel-inner">
+                <figure class="carousel-item active">
+                    <img src="./src/img/carrusel1.png" class="d-block w-100 h-100 object-fit-cover" alt="...">
+                </figure>
+                <figure class="carousel-item">
+                    <img src="./src/img/carrusel2.png" class="d-block w-100 h-100 object-fit-cover" alt="...">
+                </figure>
+                <figure class="carousel-item">
+                    <img src="./src/img/carrusel3.png" class="d-block w-100 h-100 object-fit-cover" alt="...">
+                </figure>
+            </article>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carousel-rolling" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carousel-rolling" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </section>
         <!-- --FIN DE CARROUSEL -->
         <section class="main-container">
             <article class="seccion-servicios">
                 <h3>Nuestros Servicios</h3>
-            </article>
-            <article class="seccion-consulta">
-                <h3>Dejanos tu consulta</h3>
             </article>
             <article class="seccion-gestion d-flex flex-column text-center align-items-center justify-content-center">
                 <h3 class="">Auto Gestión</h3>
@@ -144,6 +141,43 @@
                       <div class="swiper-button-prev"></div>
                       <div class="swiper-button-next"></div>
                   </div>
+                </div>
+            </article>
+            <article class="seccion-consulta">
+                <div class="text-center contacto-style">
+                    <div class="container-fluid">
+                        <div class="encabezado rounded rounded-sm">
+                            <h5>Envíanos tu consulta</h5>
+                        </div>
+                        <div class="row">
+                        <div class=" col-md-6 div-col2">
+                                <iframe src= "https://www.youtube.com/embed/YdixxxHMfD8?autoplay=1&loop=1&playlist=YdixxxHMfD8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="video img-fluid img-thumbnail p-0 mb-1 rounded border-0"></iframe>
+                        </div>
+                        <div class=" col-md-6 div-col1">
+                                <form class="formulario img-fluid img-thumbnail p-4 rounded d-flex flex-column gap-2 align-items-center justify-content-center border-0" id="form">
+                                    <div class="col-12">
+                                        <label for="validationCustom01" class="form-label">Nombre y apellido</label>
+                                        <input type="text" class="form-control border-1" id="nombre" maxlength="50" minlength="3" pattern="^[A-Za-z\s]+$" placeholder="Ej: María López">
+                                    </div>
+                                    <div class="col-12 ">
+                                        <label for="exampleFormControlInput1" class="form-label">Teléfono de contacto</label>
+                                        <input type="telefono" class="form-control border-1" id="teléfono" minlength="6" maxlength="15" pattern="^[0-9]+$" placeholder="Ej: 381-1111111">
+                                    </div>
+                                    <div class="col-12">
+                                        <label for="exampleFormControlInput1" class="form-label">Correo electrónico</label>
+                                        <input type="email" class="form-control border-1" id="mail" maxlength="30" minlength="15" pattern="[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*@[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*[.][a-zA-Z]{1,5}" placeholder="ejemplo@clínica.com">
+                                    </div>
+                                    <div class="col-12">
+                                        <label for="exampleFormControlTextarea1" class="form-label">Consulta</label>
+                                        <textarea class="form-control border-1 id="consulta" minlength="4" maxlength="300" rows="2"></textarea>
+                                    </div>
+                                    <div class="col-12 container-fluid text-center">
+                                        <button type="submit" class="btn btn-primario mt-3" id= btnEnviarConsulta onclick="guardarConsulta()"row="2">Enviar consulta</button>
+                                    </div>
+                                </form> 
+                        </div>
+                        </div>
+                    </div>
                 </div>
             </article>
         </section>
@@ -176,11 +210,13 @@
         </article>
     </footer>
     <!-- SCRIPTS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="./src/js/script.js"></script>
+    <script src="./src/js/formConsulta.js"></script>
+    <script src="./src/js/seccionProfesionales.js" type="module"></script>
+    <!-- Script bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <!-- Script Swiper -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="./src/js/seccionProfesionales.js" type="module"></script>
 </body>
 
 </html>
